exports[`Model spec Creation Type animal creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "name",
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "age",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "Weight",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "birthday",
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "isCat",
      "type": "Boolean",
    },
  ],
  "name": "CreateAnimalInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Creation Type post creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createOwner",
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "key",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "name",
            "type": Object {
              "of": "String",
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "createPets",
            "type": Object {
              "of": Object {
                "description": undefined,
                "fields": Array [
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "id",
                    "type": "Int",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "name",
                    "type": "String",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "age",
                    "type": "Int",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "Weight",
                    "type": "Float",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "birthday",
                    "type": "String",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "isCat",
                    "type": "Boolean",
                  },
                ],
                "name": "CreateAnimalInput",
                "type": "GraphQLInputObjectType",
              },
              "type": "GraphQLList",
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "pets",
            "type": Object {
              "of": "Int",
              "type": "GraphQLList",
            },
          },
        ],
        "name": "CreateuserInput",
        "type": "GraphQLInputObjectType",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "owner",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createAnimals",
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
          ],
          "name": "CreateAnimalInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animals",
      "type": Object {
        "of": "Int",
        "type": "GraphQLList",
      },
    },
  ],
  "name": "CreatePostInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Creation Type user creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "key",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "name",
      "type": Object {
        "of": "String",
        "type": "GraphQLNonNull",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createPets",
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
          ],
          "name": "CreateAnimalInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "pets",
      "type": Object {
        "of": "Int",
        "type": "GraphQLList",
      },
    },
  ],
  "name": "CreateuserInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Mutations create mutation 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "clientMutationId",
              "type": "String",
            },
          ],
          "name": "AnimalCreateMutationInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLNonNull",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": undefined,
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "animal",
        "resolve": "undefined",
        "type": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "id",
              "resolve": "undefined",
              "type": "Int",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "name",
              "resolve": "undefined",
              "type": "String",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "age",
              "resolve": "undefined",
              "type": "Int",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "Weight",
              "resolve": "undefined",
              "type": "Float",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "birthday",
              "resolve": "undefined",
              "type": "String",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "isCat",
              "resolve": "undefined",
              "type": "Boolean",
            },
          ],
          "interfaces": Array [],
          "name": "Animal",
          "type": "GraphQLObjectType",
        },
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "clientMutationId",
        "resolve": "undefined",
        "type": "String",
      },
    ],
    "interfaces": Array [],
    "name": "AnimalCreateMutationPayload",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec Queries Query connection 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "id",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "name",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameContains",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotContains",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameStartsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotStartsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameEndsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotEndsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameLike",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotLike",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "age",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "Weight",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthday",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "isCat",
            "type": "Boolean",
          },
        ],
        "name": "AnimalWhereInput",
        "type": "GraphQLInputObjectType",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": "A connection to a list of items.",
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": "Information to aid in pagination.",
        "isDeprecated": false,
        "name": "pageInfo",
        "resolve": "undefined",
        "type": Object {
          "of": Object {
            "description": "Information about pagination in a connection.",
            "fields": Array [
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating forwards, are there more items?",
                "isDeprecated": false,
                "name": "hasNextPage",
                "resolve": "undefined",
                "type": Object {
                  "of": "Boolean",
                  "type": "GraphQLNonNull",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating backwards, are there more items?",
                "isDeprecated": false,
                "name": "hasPreviousPage",
                "resolve": "undefined",
                "type": Object {
                  "of": "Boolean",
                  "type": "GraphQLNonNull",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating backwards, the cursor to continue.",
                "isDeprecated": false,
                "name": "startCursor",
                "resolve": "undefined",
                "type": "String",
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating forwards, the cursor to continue.",
                "isDeprecated": false,
                "name": "endCursor",
                "resolve": "undefined",
                "type": "String",
              },
            ],
            "interfaces": Array [],
            "name": "PageInfo",
            "type": "GraphQLObjectType",
          },
          "type": "GraphQLNonNull",
        },
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": "A list of edges.",
        "isDeprecated": false,
        "name": "edges",
        "resolve": "undefined",
        "type": Object {
          "of": Object {
            "description": "An edge in a connection.",
            "fields": Array [
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "The item at the end of the edge",
                "isDeprecated": false,
                "name": "node",
                "resolve": "undefined",
                "type": Object {
                  "description": undefined,
                  "fields": Array [
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "id",
                      "resolve": "undefined",
                      "type": "Int",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "name",
                      "resolve": "undefined",
                      "type": "String",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "age",
                      "resolve": "undefined",
                      "type": "Int",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "Weight",
                      "resolve": "undefined",
                      "type": "Float",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "birthday",
                      "resolve": "undefined",
                      "type": "String",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "isCat",
                      "resolve": "undefined",
                      "type": "Boolean",
                    },
                  ],
                  "interfaces": Array [],
                  "name": "Animal",
                  "type": "GraphQLObjectType",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "A cursor for use in pagination",
                "isDeprecated": false,
                "name": "cursor",
                "resolve": "undefined",
                "type": Object {
                  "of": "String",
                  "type": "GraphQLNonNull",
                },
              },
            ],
            "interfaces": Array [],
            "name": "AnimalEdge",
            "type": "GraphQLObjectType",
          },
          "type": "GraphQLList",
        },
      },
    ],
    "interfaces": Array [],
    "name": "AnimalConnection",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec Queries Query one 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "of": "Int",
        "type": "GraphQLNonNull",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": undefined,
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "id",
        "resolve": "undefined",
        "type": "Int",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "name",
        "resolve": "undefined",
        "type": "String",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "age",
        "resolve": "undefined",
        "type": "Int",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "Weight",
        "resolve": "undefined",
        "type": "Float",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "birthday",
        "resolve": "undefined",
        "type": "String",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "isCat",
        "resolve": "undefined",
        "type": "Boolean",
      },
    ],
    "interfaces": Array [],
    "name": "Animal",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec base type when generate base type with scalar attributes, should return equals 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "id",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "name",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "age",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "Weight",
      "resolve": "undefined",
      "type": "Float",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "birthday",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "isCat",
      "resolve": "undefined",
      "type": "Boolean",
    },
  ],
  "interfaces": Array [],
  "name": "Animal",
  "type": "GraphQLObjectType",
}
`;

exports[`Model spec base type when generate base type with sub-model, should generate sub model 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "key",
      "resolve": "undefined",
      "type": "Float",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "name",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "pets",
      "resolve": "function",
      "type": Object {
        "description": "A connection to a list of items.",
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "Information to aid in pagination.",
            "isDeprecated": false,
            "name": "pageInfo",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "Information about pagination in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasNextPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasPreviousPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "startCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "endCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                ],
                "interfaces": Array [],
                "name": "PageInfo",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "A list of edges.",
            "isDeprecated": false,
            "name": "edges",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "An edge in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "The item at the end of the edge",
                    "isDeprecated": false,
                    "name": "node",
                    "resolve": "undefined",
                    "type": Object {
                      "description": undefined,
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "id",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "name",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "age",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "Weight",
                          "resolve": "undefined",
                          "type": "Float",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "birthday",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "isCat",
                          "resolve": "undefined",
                          "type": "Boolean",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "Animal",
                      "type": "GraphQLObjectType",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "A cursor for use in pagination",
                    "isDeprecated": false,
                    "name": "cursor",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "String",
                      "type": "GraphQLNonNull",
                    },
                  },
                ],
                "interfaces": Array [],
                "name": "AnimalEdge",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLList",
            },
          },
        ],
        "interfaces": Array [],
        "name": "AnimalConnection",
        "type": "GraphQLObjectType",
      },
    },
  ],
  "interfaces": Array [],
  "name": "user",
  "type": "GraphQLObjectType",
}
`;

exports[`Model spec base type when model required few times, need generate one time only 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "id",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "owner",
      "resolve": "function",
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "key",
            "resolve": "undefined",
            "type": "Float",
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "name",
            "resolve": "undefined",
            "type": "String",
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "pets",
            "resolve": "function",
            "type": Object {
              "description": "A connection to a list of items.",
              "fields": Array [
                Object {
                  "args": Array [],
                  "deprecationReason": undefined,
                  "description": "Information to aid in pagination.",
                  "isDeprecated": false,
                  "name": "pageInfo",
                  "resolve": "undefined",
                  "type": Object {
                    "of": Object {
                      "description": "Information about pagination in a connection.",
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating forwards, are there more items?",
                          "isDeprecated": false,
                          "name": "hasNextPage",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "Boolean",
                            "type": "GraphQLNonNull",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating backwards, are there more items?",
                          "isDeprecated": false,
                          "name": "hasPreviousPage",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "Boolean",
                            "type": "GraphQLNonNull",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating backwards, the cursor to continue.",
                          "isDeprecated": false,
                          "name": "startCursor",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating forwards, the cursor to continue.",
                          "isDeprecated": false,
                          "name": "endCursor",
                          "resolve": "undefined",
                          "type": "String",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "PageInfo",
                      "type": "GraphQLObjectType",
                    },
                    "type": "GraphQLNonNull",
                  },
                },
                Object {
                  "args": Array [],
                  "deprecationReason": undefined,
                  "description": "A list of edges.",
                  "isDeprecated": false,
                  "name": "edges",
                  "resolve": "undefined",
                  "type": Object {
                    "of": Object {
                      "description": "An edge in a connection.",
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "The item at the end of the edge",
                          "isDeprecated": false,
                          "name": "node",
                          "resolve": "undefined",
                          "type": Object {
                            "description": undefined,
                            "fields": Array [
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "id",
                                "resolve": "undefined",
                                "type": "Int",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "name",
                                "resolve": "undefined",
                                "type": "String",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "age",
                                "resolve": "undefined",
                                "type": "Int",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "Weight",
                                "resolve": "undefined",
                                "type": "Float",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "birthday",
                                "resolve": "undefined",
                                "type": "String",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "isCat",
                                "resolve": "undefined",
                                "type": "Boolean",
                              },
                            ],
                            "interfaces": Array [],
                            "name": "Animal",
                            "type": "GraphQLObjectType",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "A cursor for use in pagination",
                          "isDeprecated": false,
                          "name": "cursor",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "String",
                            "type": "GraphQLNonNull",
                          },
                        },
                      ],
                      "interfaces": Array [],
                      "name": "AnimalEdge",
                      "type": "GraphQLObjectType",
                    },
                    "type": "GraphQLList",
                  },
                },
              ],
              "interfaces": Array [],
              "name": "AnimalConnection",
              "type": "GraphQLObjectType",
            },
          },
        ],
        "interfaces": Array [],
        "name": "user",
        "type": "GraphQLObjectType",
      },
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "animals",
      "resolve": "function",
      "type": Object {
        "description": "A connection to a list of items.",
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "Information to aid in pagination.",
            "isDeprecated": false,
            "name": "pageInfo",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "Information about pagination in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasNextPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasPreviousPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "startCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "endCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                ],
                "interfaces": Array [],
                "name": "PageInfo",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "A list of edges.",
            "isDeprecated": false,
            "name": "edges",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "An edge in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "The item at the end of the edge",
                    "isDeprecated": false,
                    "name": "node",
                    "resolve": "undefined",
                    "type": Object {
                      "description": undefined,
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "id",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "name",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "age",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "Weight",
                          "resolve": "undefined",
                          "type": "Float",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "birthday",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "isCat",
                          "resolve": "undefined",
                          "type": "Boolean",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "Animal",
                      "type": "GraphQLObjectType",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "A cursor for use in pagination",
                    "isDeprecated": false,
                    "name": "cursor",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "String",
                      "type": "GraphQLNonNull",
                    },
                  },
                ],
                "interfaces": Array [],
                "name": "AnimalEdge",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLList",
            },
          },
        ],
        "interfaces": Array [],
        "name": "AnimalConnection",
        "type": "GraphQLObjectType",
      },
    },
  ],
  "interfaces": Array [],
  "name": "Post",
  "type": "GraphQLObjectType",
}
`;
